<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginscreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Contenedor"
            android:layout_width="323dp"
            android:layout_height="452dp"
            android:background="#CC042940"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <TextView
                android:id="@+id/tituloNewContraseña"
                android:layout_width="121dp"
                android:layout_height="41dp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/textoPrincipal"
                android:textAlignment="center"
                android:textColor="@color/colorBackground"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <TextView
                android:id="@+id/correoLabelNewContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/labelCorreoElectronico"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tituloNewContraseña" />

            <EditText
                android:id="@+id/correoField"
                android:layout_width="285dp"
                android:layout_height="47dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/formfield"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/ContraseñaField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correoLabelNewContraseña"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="121dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:text="@string/RecuerdameLabel"
                android:textColor="@color/colorBackground"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContraseñaField"
                app:layout_constraintVertical_bias="0.085" />

            <TextView
                android:id="@+id/contraseñaLabelNewContaseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/labelContraseña"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/ContraseñaField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correoField"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/ContraseñaField"
                android:layout_width="281dp"
                android:layout_height="44dp"
                android:background="@drawable/formfield"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.578" />

            <Button
                android:id="@+id/RecuperarContraseña"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="175dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:text="@string/labelRecuperarContraseña"
                android:textColor="@color/colorBackground"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/checkBox2"
                app:layout_constraintTop_toBottomOf="@+id/ContraseñaField" />

            <Button
                android:id="@+id/confirmarBtn"
                android:layout_width="117dp"
                android:layout_height="43dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/labelEnviarBtn"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.828" />

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="106dp"
                android:layout_height="31dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/labelRegistrarse"
                android:textColor="@color/colorBackground"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.109"
                app:layout_constraintStart_toEndOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:text="@string/Notienescuenta"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmarBtn"
                app:layout_constraintVertical_bias="0.333" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="78dp"
            android:layout_height="88dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.174"
            app:srcCompat="@drawable/iconoperfil" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>