<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginscreenerror">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Contenedor"
            android:layout_width="323dp"
            android:layout_height="452dp"
            android:background="#CC042940"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <TextView
                android:id="@+id/tituloNewContraseña"
                android:layout_width="121dp"
                android:layout_height="41dp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/textoPrincipal"
                android:textAlignment="center"
                android:textColor="@color/colorBackground"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <TextView
                android:id="@+id/correoLabelNewContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelCorreoElectronico"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.272" />

            <EditText
                android:id="@+id/correoField"
                android:layout_width="285dp"
                android:layout_height="47dp"
                android:background="@drawable/formfield"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.355" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="121dp"
                android:layout_height="39dp"
                android:text="@string/RecuerdameLabel"
                android:textColor="@color/colorBackground"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.69" />

            <TextView
                android:id="@+id/contraseñaLabelNewContaseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelContraseña"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/ContraseñaField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.953" />

            <EditText
                android:id="@+id/ContraseñaField"
                android:layout_width="281dp"
                android:layout_height="44dp"
                android:background="@drawable/formfield"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.452"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.556" />

            <Button
                android:id="@+id/RecuperarContraseña"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="179dp"
                android:layout_height="54dp"
                android:text="@string/labelRecuperarContraseña"
                android:textColor="@color/colorBackground"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/checkBox2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.68" />

            <Button
                android:id="@+id/confirmarBtn"
                android:layout_width="117dp"
                android:layout_height="43dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/labelEnviarBtn"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.828" />

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="119dp"
                android:layout_height="38dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/labelRegistrarse"
                android:textColor="@color/colorBackground"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.107"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.961" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notienescuenta"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.226"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.935" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toBottomOf="@+id/correoField"
                app:layout_constraintEnd_toEndOf="@+id/correoField"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="@+id/correoField"
                app:layout_constraintTop_toTopOf="@+id/correoField"
                app:layout_constraintVertical_bias="0.473"
                app:srcCompat="@drawable/error" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="27dp"
                app:layout_constraintBottom_toBottomOf="@+id/ContraseñaField"
                app:layout_constraintEnd_toEndOf="@+id/ContraseñaField"
                app:layout_constraintHorizontal_bias="0.957"
                app:layout_constraintStart_toStartOf="@+id/ContraseñaField"
                app:layout_constraintTop_toTopOf="@+id/ContraseñaField"
                app:layout_constraintVertical_bias="0.529"
                app:srcCompat="@drawable/error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="78dp"
            android:layout_height="88dp"
            app:layout_constraintBottom_toTopOf="@+id/Contenedor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/iconoperfil" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>